[gd_scene load_steps=4 format=3 uid="uid://cm3vq4rvy1oq2"]

[ext_resource type="Script" path="res://ui/motivation_panel.gd" id="1_2h00f"]
[ext_resource type="PackedScene" uid="uid://bi80i85e86noj" path="res://ui/need_bar.tscn" id="2_a42tf"]
[ext_resource type="PackedScene" uid="uid://dxsbry2bttd5f" path="res://ui/motivation_bar.tscn" id="4_jpsmr"]

[node name="MotivationPanel" type="MarginContainer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -170.0
offset_right = 620.0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_2h00f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ExpandingBars" type="GridContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 3

[node name="AutonomyBar" parent="VBoxContainer/ExpandingBars" instance=ExtResource("2_a42tf")]
layout_mode = 2

[node name="CompetenceBar" parent="VBoxContainer/ExpandingBars" instance=ExtResource("2_a42tf")]
layout_mode = 2
need = 1

[node name="RelatednessBar" parent="VBoxContainer/ExpandingBars" instance=ExtResource("2_a42tf")]
layout_mode = 2
need = 2

[node name="NutritionBar" parent="VBoxContainer/ExpandingBars" instance=ExtResource("2_a42tf")]
layout_mode = 2
need = 3

[node name="PABar" parent="VBoxContainer/ExpandingBars" instance=ExtResource("2_a42tf")]
layout_mode = 2
need = 4

[node name="SleepBar" parent="VBoxContainer/ExpandingBars" instance=ExtResource("2_a42tf")]
layout_mode = 2
need = 5

[node name="MotivationBar" parent="VBoxContainer" instance=ExtResource("4_jpsmr")]
layout_mode = 2

[connection signal="toggled" from="VBoxContainer/MotivationBar" to="." method="_on_motivation_bar_toggled"]
